Fix too much padding around navbar issue on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,6 @@ h1 {
 
 .layer {
     background-color: var(--leaf-color-opaque);
-    padding: 5px 0;
 }
 
 /* Navbar */
